--- a/Views/ClassSection/QuanLyLopHoc.cshtml
+++ b/Views/ClassSection/QuanLyLopHoc.cshtml
@@ -1,10 +1,9 @@
 ﻿@using QuanLyCongTacTroGiangKhoaCNTT.Models;
 @{
-    ViewBag.Title = "Lớp học phần";
-    Layout = Session["layout"].ToString();
-
     CongTacTroGiangKhoaCNTTEntities models = new CongTacTroGiangKhoaCNTTEntities();
 
+    ViewBag.Title = "Lớp học phần";
+    Layout = Session["layout"].ToString();
     var taikhoan = Session["TaiKhoan"] as TaiKhoan;
     var ma = string.IsNullOrEmpty(taikhoan.Ma) ? "" : taikhoan.Ma.ToLower();
     string userTennganh = taikhoan.Nganh == null ? "công nghệ thông tin" : taikhoan.Nganh.TenNganh.ToLower();
@@ -16,28 +15,21 @@
     int id_hkGanNhat = 0;
     if (lstHocKy.Count > 0)
     {
-        var hkGanNhat = lstHocKy.OrderByDescending(o => o.NgayBatDau).ToList().First();
-        if (hkGanNhat == null)
-        {
-            id_hkGanNhat = lstHocKy.First().ID;
-        }
-        else
-        {
-            id_hkGanNhat = hkGanNhat.ID;
-        }
+        var hkGanNhat = lstHocKy.OrderByDescending(o => o.ID).ToList().First();
+        id_hkGanNhat = hkGanNhat.ID;
     }
 
     int id_nganhCNTT = 0;
     if (lstNganh.Count > 0)
     {
-        var nganhcntt = lstNganh.FirstOrDefault(f => f.TenNganh.ToLower().Equals("công nghệ thông tin"));
+        var nganhcntt = lstNganh.FirstOrDefault(f => f.TenNganh.ToLower().Equals(userTennganh));
         if (nganhcntt != null)
         {
             id_nganhCNTT = nganhcntt.ID;
         }
     }
 
-    var lstTkb = models.ThoiKhoaBieu.Where(w => w.ID_HocKy == id_hkGanNhat && w.ID_Nganh == id_nganhCNTT).ToList();
+    var lstTkb = models.LopHocPhan.Where(w => w.ID_HocKy == id_hkGanNhat && w.ID_Nganh == id_nganhCNTT && w.PhanCongTroGiang.Where(wp => wp.ID_TaiKhoan == taikhoan.ID).Count() > 0).ToList();
 }
 <script src="~/ActiveItemMenu/ClassSection/index.js"></script>
 <section class="container-fluid p-4">
@@ -60,7 +52,6 @@
                     </nav>
                 </div>
                 <!-- button -->
-
             </div>
         </div>
 
@@ -70,9 +61,9 @@
         <!-- basic table -->
         <div class="col-md-12 col-12 mb-5">
             <div class="card">
-                <div class="card-header border-bottom-0 pb-0">
+                <div class="card-header border-bottom-1 pt-3">
                     <div class="row">
-                        <div class="mb-3 col-md-4 col-12">
+                        <div class="mb-3 col-md-3 col-12">
                             <label class="form-label">Học kỳ</label>
                             <select id="hocky" class="form-select" data-width="100%">
                                 @foreach (var item in lstHocKy)
@@ -89,10 +80,26 @@
                                 }
                             </select>
                         </div>
+                        <div class="mb-3 col-md-3 col-12 ">
+                            <label class="form-label">Ngành</label>
+                            <select id="nganh" class="form-select" data-width="100%">
+                                @foreach (var item in lstNganh)
+                                {
+                                    if (item.TenNganh.ToLower().Equals(userTennganh))
+                                    {
+                                        <option name="@item.TenNganh" selected value="@item.ID">@item.TenNganh</option>
+                                    }
+                                    else
+                                    {
+                                        <option name="@item.TenNganh" value="@item.ID">@item.TenNganh</option>
+                                    }
+                                }
+                            </select>
+                        </div>
                     </div>
                 </div>
                 <!-- table  -->
-                <div class="card-body">
+                <div class="card-body mt-3" id="filterLoad">
                     <div class="table-card">
                         <table id="dataTableBasic" class="table table-hover" style="width:100%">
                             <thead class="table-light">
@@ -105,20 +112,30 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in lstTkb.ToList())
+                                @foreach (var item in lstTkb.ToList().OrderByDescending(o => o.ID))
                                 {
                                     <tr>
-                                        <td>@item.LopHocPhan.MaLHP</td>
-                                        <td>@item.LopHocPhan.TenHP</td>
-                                        <td>@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.Phong)</td>
-                                        <td>0</td>
+                                        <td>@item.MaLHP</td>
+                                        <td>@item.TenHP</td>
+                                        <td>
+                                            <ul>
+                                                @foreach (var items in item.ThoiKhoaBieu.ToList())
+                                                {
+                                                    <li>
+                                                        @(items.Thu); Tiết @(items.TietHoc); Tuần @(items.TuanBD) - @(items.TuanKT); Phòng @(items.Phong)
+                                                    </li>
+                                                }
+                                            </ul>
+                                        </td>
+                                        <td>
+                                            @item.DanhSachSinhVien.Count()
+                                        </td>
                                         <td class="text-nowrap">
                                             <span data-bs-toggle="modal" data-bs-target="#diemdanh">
                                                 <a style="font-size: 20px" role="button" data-bs-toggle="tooltip" data-bs-html="true" title="Điểm danh lớp học" class="text-primary">
-                                                    <span><i class="bi bi-calendar3"></i></span>
+                                                    <span><i class="bi bi-calendar3 me-2"></i></span>
                                                 </a>
                                             </span>
-
                                         </td>
                                     </tr>
                                 }
@@ -130,7 +147,6 @@
             </div>
         </div>
     </div>
-
 
     <div class="modal fade" id="diemdanh" tabindex="-1" role="dialog" aria-labelledby="diemdanh" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable" role="document">
@@ -148,14 +164,14 @@
                                 <div class="col-6">
                                     <div class="mb-3">
                                         <select id="hocky" class="form-select w-auto">
-                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 5</option>
-                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 6</option>
-                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 7</option>
+                                            <option value="7">Tuần 5</option>
+                                            <option value="7">Tuần 6</option>
+                                            <option value="7">Tuần 7</option>
                                         </select>
                                     </div>
                                 </div>
 
-                                <div class="col-6" style="display: flex; flex-direction: row; align-items: end">
+                                <div class="col-6">
                                     <div class="w-100 text-end">
                                         <a id="btnExportTkb" class="btn btn-outline-secondary">
                                             <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
@@ -163,9 +179,7 @@
                                     </div>
                                 </div>
                             </div>
-
                             <h5>Lớp HP: 221_71ITBS10103_01 - Nhập môn công nghệ thông tin</h5>
-                            <h5>GV: Lê Thị Hồng</h5>
                             <h5>Sĩ Số: 20/20</h5>
                         </div>
                         <div class="col-12">
@@ -178,17 +192,17 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <div class="table-card">
+                            <div class="table-card mt-0">
                                 <table id="diemDanhTable" class="table table-hover" style="width:100%">
                                     <thead class="table-light">
                                         <tr>
                                             <th>TT</th>
                                             <th>MSSV</th>
-                                            <th>Họ và Tên</th>
+                                            <th>Họ & Tên</th>
                                             <th>Email</th>
                                             <th>Ngày sinh</th>
                                             <th>Giới tính</th>
-                                            <th data-bs-toggle="tooltip" data-bs-html="true" title="Chọn nếu sinh viên có mặt">
+                                            <th>
                                                 Đ.Danh
                                             </th>
                                         </tr>
@@ -216,6 +230,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <div class="modal-footer">
                     <button id="btnClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
@@ -224,14 +239,12 @@
             </div>
         </div>
     </div>
+
 </section>
 <script src="~/Validation/teacher/classsection/suggestedTA.js"></script>
+
 <script>
     $(document).ready(function () {
-        $("#diemDanhTable").DataTable({
-            responsive: !0,
-            pagingType: "numbers",
-            pageLength: 100,
-        });
+        $("#diemDanhTable").DataTable();
     });
 </script>
