--- a/Views/TeachingAssistant/_Apply.cshtml
+++ b/Views/TeachingAssistant/_Apply.cshtml
@@ -30,7 +30,7 @@
     <!-- card header  -->
     <div class="card-header border-bottom-0 pb-0">
         <div class="row">
-            <div class="mb-3 col-md-4 col-12">
+            <div class="mb-3 col-md-6 col-12">
                 <label class="form-label">Học kỳ</label>
                 <select id="hocky" class="form-select" data-width="100%">
                     @foreach (var item in lstHocKy)
@@ -47,7 +47,7 @@
                     }
                 </select>
             </div>
-            <div class="mb-3 col-md-4 col-12">
+            <div class="mb-3 col-md-6 col-12">
                 <label class="form-label">Ngành</label>
                 <select id="nganh" class="form-select" data-width="100%">
                     @foreach (var item in userKhoa.Nganh.ToList())
@@ -62,12 +62,6 @@
                         }
                     }
                 </select>
-            </div>
-            <div class="mb-3 col-md-4 col-12">
-                <label class="form-label">Chú thích</label>
-                <div class="form-control">
-                    <span class="badge bg-warning me-2">Thực hành</span><span class="badge bg-success me-2">Lý thuyết</span><span class="badge bg-danger">Đã đăng ký</span>
-                </div>
             </div>
         </div>
     </div>
@@ -121,6 +115,7 @@
                             <tr>
                                 <th class="text-nowrap">Mã LHP</th>
                                 <th class="text-nowrap">Tên HP</th>
+                                <th class="text-nowrap">Loại HP</th>
                                 <th class="text-nowrap">Lịch Học</th>
                                 <th class="text-nowrap">Số tiết</th>
                                 <th class="text-nowrap">Ứng tuyển</th>
@@ -133,6 +128,18 @@
                                 <tr>
                                     <td valign="middle">@item.MaLHP</td>
                                     <td valign="middle">@item.TenHP</td>
+
+                                    <td valign="middle">
+                                        @if (item.LoaiHP.ToLower().Equals("lý thuyết"))
+                                        {
+                                            <span class="badge bg-success">Lý Thuyết</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="badge bg-warning">Thực Hành</span>
+
+                                        }
+                                    </td>
                                     <td valign="middle">
                                         <ul>
                                             @foreach (var items in item.ThoiKhoaBieu.ToList())
@@ -151,7 +158,7 @@
                                             {
                                                 <span data-bs-toggle="tooltip" data-bs-html="true" title="Cập nhật thông tin ứng tuyển">
                                                     <a role="button" typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @item.MaLHP - @item.TenHP."
-                                                       name="@item.ID" class="btn btn-primary btn-sm" id="applyLHP-@item.ID">
+                                                       name="@item.ID" class="btn btn-warning btn-sm" id="applyLHP-@item.ID">
                                                         Cập nhật
                                                     </a>
                                                 </span>
@@ -161,7 +168,7 @@
                                                 <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết thông tin ứng tuyển">
                                                     <a role="button" typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Chi tiết đăng ký trợ giảng LHP: @item.MaLHP - @item.TenHP."
                                                        name="@item.ID" class="btn btn-primary btn-sm" id="applyLHP-@item.ID">
-                                                        Cập nhật
+                                                        Chi tiết
                                                     </a>
                                                 </span>
                                             }
