--- a/Views/TeachingAssistant/_FilterChildApply.cshtml
+++ b/Views/TeachingAssistant/_FilterChildApply.cshtml
@@ -29,6 +29,7 @@
                 <tr>
                     <th class="text-nowrap">Mã LHP</th>
                     <th class="text-nowrap">Tên HP</th>
+                    <th class="text-nowrap">Loại HP</th>
                     <th class="text-nowrap">Lịch Học</th>
                     <th class="text-nowrap">Số tiết</th>
                     <th class="text-nowrap">Ứng tuyển</th>
@@ -41,6 +42,16 @@
                     <tr>
                         <td valign="middle">@item.MaLHP</td>
                         <td valign="middle">@item.TenHP</td>
+                        <td valign="middle">
+                            @if (item.LoaiHP.ToLower().Equals("lý thuyết"))
+                            {
+                                <span class="badge bg-success">Lý Thuyết</span>
+                            }
+                            else
+                            {
+                                <span class="badge bg-warning">Thực Hành</span>
+                            }
+                        </td>
                         <td valign="middle">
                             <ul>
                                 @foreach (var items in item.ThoiKhoaBieu.ToList())
@@ -59,7 +70,7 @@
                                 {
                                     <span data-bs-toggle="tooltip" data-bs-html="true" title="Cập nhật thông tin ứng tuyển">
                                         <a role="button" typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @item.MaLHP - @item.TenHP."
-                                           name="@item.ID" class="btn btn-primary btn-sm" id="applyLHP-@item.ID">
+                                           name="@item.ID" class="btn btn-warning btn-sm" id="applyLHP-@item.ID">
                                             Cập nhật
                                         </a>
                                     </span>
@@ -69,7 +80,7 @@
                                     <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết thông tin ứng tuyển">
                                         <a role="button" typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Chi tiết đăng ký trợ giảng LHP: @item.MaLHP - @item.TenHP."
                                            name="@item.ID" class="btn btn-primary btn-sm" id="applyLHP-@item.ID">
-                                            Cập nhật
+                                            Chi tiết
                                         </a>
                                     </span>
                                 }
