--- a/Views/TeachingAssistant/_FilterParentApply.cshtml
+++ b/Views/TeachingAssistant/_FilterParentApply.cshtml
@@ -68,6 +68,7 @@
                         <tr>
                             <th class="text-nowrap">Mã LHP</th>
                             <th class="text-nowrap">Tên HP</th>
+                            <th class="text-nowrap">Loại HP</th>
                             <th class="text-nowrap">Lịch Học</th>
                             <th class="text-nowrap">Số tiết</th>
                             <th class="text-nowrap">Ứng tuyển</th>
@@ -80,6 +81,17 @@
                             <tr>
                                 <td valign="middle">@item.MaLHP</td>
                                 <td valign="middle">@item.TenHP</td>
+                                <td valign="middle">
+                                    @if (item.LoaiHP.ToLower().Equals("lý thuyết"))
+                                    {
+                                        <span class="badge bg-success">Lý Thuyết</span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge bg-warning">Thực Hành</span>
+
+                                    }
+                                </td>
                                 <td valign="middle">
                                     <ul>
                                         @foreach (var items in item.ThoiKhoaBieu.ToList())
@@ -98,7 +110,7 @@
                                         {
                                             <span data-bs-toggle="tooltip" data-bs-html="true" title="Cập nhật thông tin ứng tuyển">
                                                 <a role="button" typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @item.MaLHP - @item.TenHP."
-                                                   name="@item.ID" class="btn btn-primary btn-sm" id="applyLHP-@item.ID">
+                                                   name="@item.ID" class="btn btn-warning btn-sm" id="applyLHP-@item.ID">
                                                     Cập nhật
                                                 </a>
                                             </span>
@@ -108,7 +120,7 @@
                                             <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết thông tin ứng tuyển">
                                                 <a role="button" typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Chi tiết đăng ký trợ giảng LHP: @item.MaLHP - @item.TenHP."
                                                    name="@item.ID" class="btn btn-primary btn-sm" id="applyLHP-@item.ID">
-                                                    Cập nhật
+                                                    Chi tiết
                                                 </a>
                                             </span>
                                         }
